# agents-idx

./: .env.example  README.md  package.json  publish-extension.sh  reset-extension.sh
Edit_video_CLI/: .env.example  README.md  README_.md  pyproject.toml  requirements.txt  setup.py  transcricao.seo.json  transcricao.txt
Edit_video_CLI/src/: main.py
Edit_video_CLI/src/cli/: __init__.py  commands.py
Edit_video_CLI/src/core/: __init__.py  audio_processor.py  metadata_handler.py  seo_generator.py  transcription.py
Edit_video_CLI/src/llm/: factory.py  gemini.py
Edit_video_CLI/src/utils/: __init__.py  file_utils.py
Edit_video_Extension/: .env.example  UPDATE.md  UPLOAD_GUIA.md  convert-test.js  eslint.config.js  package-lock.json  package.json  publish-extension.sh  reset-extension.sh  seo-test.js  transcribe-test.js  tsconfig.json  update-extension.sh
Edit_video_Extension/release/: extension.js
Edit_video_Extension/resources/: preproducao.sh
Edit_video_Extension/src/scripts/: audioProcessor.ts  config.ts  extension.ts  geminiClient.ts  types.ts  webviewManager.ts
